# AssertionEngine

./: .flake8  .gitignore  .pre-commit-config.yaml  BUILD.md  BUILD.rst  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  README.rst  bootstrap.py  mypy.ini  pyproject.toml  requirements-dev.txt  setup.py  tasks.py
.github/workflows/: on-push.yml
AssertionEngine/: __init__.py  assertion_engine.py  data_types.py  type_converter.py
assertionengine/: __init__.py  assertion_engine.py  formatter.py  rule.py  rules.py  type_converter.py
atest/: 01_assertion_with_scopes.robot  02_assertion_with_scopes.robot  TestLibrary.py  TestLibraryWithScopes.py  asserion_equal.robot  assertion_equal.robot  assertion_matches.robot  resource.resource
src/assertionengine/: __init__.py  assertion_engine.py  formatter.py  type_converter.py
utest/: test_assertion_engine.py  test_assertion_operator.py  test_formatters.py  test_rule.py  test_split_assertion.py  test_verify_assertion.py
utest/approved_files/: test_assertion_engine.test_contains.approved.txt  test_assertion_engine.test_custom_error.approved.txt  test_assertion_engine.test_ends_with.approved.txt  test_assertion_engine.test_equals.approved.txt  test_assertion_engine.test_greater.approved.txt  test_assertion_engine.test_invalid_operator.approved.txt  test_assertion_engine.test_less.approved.txt  test_assertion_engine.test_match.approved.txt  test_assertion_engine.test_no_operator.approved.txt  test_assertion_engine.test_not_contains.approved.txt  test_assertion_engine.test_not_equals.approved.txt  test_assertion_engine.test_start_with.approved.txt  test_assertion_engine.test_then.approved.txt  test_assertion_engine.test_validate.approved.txt  test_assertion_operator.test_assertion_operator.approved.txt  test_assertion_operator.test_evaluation_operators.approved.txt  test_assertion_operator.test_handlers.approved.txt  test_assertion_operator.test_numerical_operators.approved.txt  test_assertion_operator.test_sequence_operators.approved.txt  test_rule.test_rule.received.txt  test_split_assertion.test_split_assertion.approved.txt
