[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robotframework-assertion-engine"
version = "3.0.3"
description = "Generic way to create meaningful and easy to use assertions for the Robot Framework libraries."
authors = [{ name="Tatu Aalto", email="aalto.tatu@gmail.com" }]
license = {file = "LICENSE"}
readme = "README.rst"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Tool",
]
keywords = ["Robot Framework", "Libraries", "Assertions"]

requires-python = ">=3.9,<4.0"
dependencies = ["robotframework >= 5.0.1", "robotframework-pythonlibcore>=3.0.0"]

[project.urls]
Homepage = "https://github.com/MarketSquare/AssertionEngine"
Issues = "https://github.com/MarketSquare/AssertionEngine/issues"
Changelog = "https://github.com/MarketSquare/AssertionEngine/releases"

[tool.setuptools]
packages = ["assertionengine"]

[tool.ruff]
lint.unfixable = []
exclude = [
  "__pycache__",
]
lint.ignore = [
  "E501",  # line too long
]
target-version = "py38"
lint.select = [
  "E",
  "F",
  "W",
  "C90",
  "I",
  "N",
  "B",
  "PYI",
  "PL",
  "PTH",
  "UP",
  "A",
  "C4",
  "DTZ",
  "ISC",
  "ICN",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "RSE",
  "RET",
  "SIM",
  "RUF"
]

[tool.ruff.lint.pylint]
max-args = 6

[tool.mypy]
[mypy]
python_version = 3.9
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "mypy-pytest.*"
ignore_missing_imports = true
