[project]
name = "robotframework-assertion-engine"
version = "3.1.1"
description = "Generic way to create meaningful and easy to use assertions for the Robot Framework libraries."
authors = [{ name="Tatu Aalto", email="aalto.tatu@gmail.com" }]
license = "Apache-2.0"
readme = "README.rst"
keywords = ["Robot Framework", "Libraries", "Assertions"]

requires-python = ">=3.10,<4.0"
dependencies = ["robotframework >= 6.1.1", "robotframework-pythonlibcore>=3.0.0"]

[project.urls]
Homepage = "https://github.com/MarketSquare/AssertionEngine"
Issues = "https://github.com/MarketSquare/AssertionEngine/issues"
Changelog = "https://github.com/MarketSquare/AssertionEngine/releases"

[tool.setuptools]
packages = ["assertionengine"]

[tool.ruff]
lint.unfixable = []
exclude = [
  "__pycache__",
]
lint.ignore = [
  "E501",  # line too long
]
target-version = "py38"
lint.select = [
  "E",
  "F",
  "W",
  "C90",
  "I",
  "N",
  "B",
  "PYI",
  "PL",
  "PTH",
  "UP",
  "A",
  "C4",
  "DTZ",
  "ISC",
  "ICN",
  "INP",
  "PIE",
  "T20",
  "PYI",
  "PT",
  "RSE",
  "RET",
  "SIM",
  "RUF"
]

[tool.ruff.lint.pylint]
max-args = 6

[tool.mypy]
python_version = "3.10"
